k8s-resources/tiller-namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: tiller
  labels: 
    name: tiller
