k8s-resources/kubia-http-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: kubia
  name: kubia-http
  namespace: default
spec:
  clusterIP: 10.104.242.214
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30260
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: kubia
  sessionAffinity: None
  type: NodePort
